  **************************
  * v2.5.1
  **************************

    * Bugfix CORE-3512
        Server hangs when trace is running
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-3508
        MON$DATABASE_NAME and MON$ATTACHMENT_NAME fields contain question marks
        instead of non-ASCII characters regardless of the connection charset
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-3494
        Attach fails after shutdown rejected by handler installed in fb_shutdown_callback()
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-3493
        Adding a value to a timestamp below '16.11.1858 00:00:01' throws
        error 'value exceeds the range for valid timestamp'
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-3491
        Altering of a TYPE OF COLUMN parameter affects the original column
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-3489
        Blob transliteration may not happen inside the union
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-3487
        Sometimes fbtracemgr segfaults when ending with Ctrl+C
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-3486
        GPRE language modules can't be compiled with gcc 4.4
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-3482
        NBACKUP segfaults on Ctrl-C and leaves db locked (delta file continues to grow)
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-3479
        ASCII_VAL raises error instead of return 0 for empty strings.
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-3477
        Passing non-existing SQL parameters always crash server
      Contributor(s):